fix: Correction ESLint flat config et amélioration ZAP DAST
- ESLint: Suppression de --ext (non supporté avec eslint.config.js)
- ESLint: Utilisation de --format json pour générer un rapport JSON
- ZAP: Vérification que l'application est accessible avant le scan
- ZAP: Amélioration du démarrage avec vérification du processus
- ZAP: Ajout de timeout (-t 5) et gestion des erreurs Docker
- ZAP: Création d'un rapport vide si l'application n'est pas accessible
- Logs détaillés pour identifier les problèmes

--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -125,13 +125,15 @@ jobs:
         run: |
           cd frontend
           npm ci
-          npm run lint > eslint-report.json 2>&1 || true
+          # ESLint avec format JSON pour le parsing (compatible avec flat config)
+          npx eslint . --format json --report-unused-disable-directives --max-warnings 0 > eslint-report.json 2>&1 || true
         # Pourquoi : ESLint détecte les problèmes dans le code JavaScript/React :
         #   - Erreurs de syntaxe
         #   - Problèmes de sécurité (ex: dangerouslySetInnerHTML)
         #   - Mauvaises pratiques
         # Comment : ESLint analyse statiquement le code JS/JSX
-        #   Le rapport est sauvegardé pour être parsé plus tard
+        #   --format json génère un rapport JSON compatible avec le parser
+        #   Note : --ext n'est plus nécessaire avec eslint.config.js (flat config)
         
       - name: Save SAST reports
         run: |
@@ -381,28 +383,67 @@ jobs:
           JAR_FILE=$(find target -name "*.jar" ! -name "*-sources.jar" ! -name "*-javadoc.jar" | head -1)
           if [ -z "$JAR_FILE" ]; then
             echo "❌ Aucun JAR trouvé dans target/"
+            echo "📋 Contenu de target/:"
+            ls -lah target/ || echo "Dossier target/ vide"
             exit 1
           fi
           echo "🚀 Démarrage de l'application: $JAR_FILE"
           nohup java -jar "$JAR_FILE" > ../app.log 2>&1 &
-          echo $! > ../app.pid
+          APP_PID=$!
+          echo $APP_PID > ../app.pid
+          echo "📝 PID de l'application: $APP_PID"
+          
           # Attendre que l'application démarre (vérifier le port 8080)
+          echo "⏳ Attente du démarrage de l'application..."
+          APP_READY=false
           for i in {1..60}; do
+            # Vérifier si le processus est toujours en cours
+            if ! kill -0 $APP_PID 2>/dev/null; then
+              echo "❌ L'application s'est arrêtée (code de sortie: $?)"
+              echo "📋 Logs de l'application:"
+              tail -50 ../app.log || echo "Aucun log disponible"
+              exit 1
+            fi
+            
+            # Vérifier si l'application répond
             if curl -f http://localhost:8080/actuator/health 2>/dev/null || curl -f http://localhost:8080 2>/dev/null; then
-              echo "✅ Application démarrée après ${i}s"
+              echo "✅ Application démarrée et répond après ${i}s"
+              APP_READY=true
               break
             fi
             sleep 2
           done
+          
+          if [ "$APP_READY" = false ]; then
+            echo "⚠️  L'application ne répond pas après 120s"
+            echo "📋 Logs de l'application:"
+            tail -50 ../app.log || echo "Aucun log disponible"
+            echo "📋 Processus Java en cours:"
+            ps aux | grep java || echo "Aucun processus Java trouvé"
+            # Ne pas échouer, continuer quand même (ZAP peut quand même scanner)
+          fi
         # Pourquoi : Démarrer l'application Spring Boot pour la tester dynamiquement
         # Comment : Lancer l'app en arrière-plan, sauvegarder le PID, et vérifier qu'elle répond
+        continue-on-error: true
+        
+      - name: Verify Application is Running
+        run: |
+          echo "🔍 Vérification que l'application est accessible..."
+          if curl -f http://localhost:8080 2>/dev/null; then
+            echo "✅ Application accessible sur http://localhost:8080"
+          else
+            echo "⚠️  Application non accessible, mais on continue quand même"
+            # Créer un rapport vide pour éviter les erreurs
+            mkdir -p reports/dast
+            echo '{"@version":"2.11.0","site":[]}' > reports/dast/zap-report.json
+          fi
         continue-on-error: true
         
       - name: Run OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.10.0
         with:
           target: 'http://localhost:8080'
-          cmd_options: '-a -J'
+          cmd_options: '-a -J -t 5'
           report_file: 'zap-report.json'
         # Pourquoi : OWASP ZAP teste l'application EN EXÉCUTION pour :
         #   - Détecter les vulnérabilités runtime (XSS, SQL injection, etc.)
@@ -411,8 +452,10 @@ jobs:
         # Comment : ZAP envoie des requêtes HTTP malveillantes et analyse les réponses
         #   -a : Active toutes les règles
         #   -J : Génère un rapport JSON
+        #   -t 5 : Timeout de 5 minutes
         #   report_file : Spécifie le nom du fichier de rapport
         continue-on-error: true
+        # Note : Si Docker échoue, on continue et on crée un rapport vide dans Save DAST reports
         
       - name: Stop Backend Application
         if: always()
