--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -470,12 +470,65 @@ jobs:
           fi
         continue-on-error: true
         
-      - name: Run OWASP ZAP Baseline Scan
+      - name: Run OWASP ZAP Baseline Scan (Alternative - Docker Direct)
+        if: always()
+        run: |
+          echo "🔍 Tentative de scan ZAP avec Docker direct (alternative)..."
+          mkdir -p reports/dast
+          
+          # Vérifier que l'application est accessible
+          if ! curl -f http://localhost:8080 2>/dev/null; then
+            echo "⚠️  Application non accessible, création d'un rapport vide"
+            echo '{"@version":"2.11.0","site":[]}' > reports/dast/zap-report.json
+            exit 0
+          fi
+          
+          # Essayer avec Docker direct si disponible
+          if command -v docker &> /dev/null; then
+            echo "🐳 Exécution de ZAP avec Docker direct..."
+            echo "📥 Téléchargement de l'image ZAP (si nécessaire)..."
+            docker pull owasp/zap2docker-stable || echo "⚠️  Impossible de télécharger l'image ZAP"
+            
+            echo "🚀 Lancement du scan ZAP..."
+            # Utiliser host.docker.internal pour accéder à localhost:8080 depuis le conteneur
+            docker run --rm \
+              --network host \
+              -v $(pwd):/zap/wrk/:rw \
+              -t owasp/zap2docker-stable \
+              zap-baseline.py \
+              -t http://localhost:8080 \
+              -J \
+              -a \
+              -r zap-report.json \
+              -I || {
+              echo "⚠️  Scan ZAP échoué, création d'un rapport vide"
+              echo '{"@version":"2.11.0","site":[]}' > reports/dast/zap-report.json
+            }
+            
+            # Copier le rapport si généré
+            if [ -f zap-report.json ]; then
+              cp zap-report.json reports/dast/zap-report.json
+              echo "✅ Rapport ZAP généré avec Docker direct"
+            elif [ -f /zap/wrk/zap-report.json ]; then
+              cp /zap/wrk/zap-report.json reports/dast/zap-report.json
+              echo "✅ Rapport ZAP généré (depuis /zap/wrk/)"
+            fi
+          else
+            echo "⚠️  Docker non disponible, création d'un rapport vide"
+            echo '{"@version":"2.11.0","site":[]}' > reports/dast/zap-report.json
+          fi
+        continue-on-error: true
+        # Pourquoi : Alternative si l'action zaproxy/action-baseline échoue
+        # Comment : Utilise Docker directement pour exécuter ZAP
+        # Note : --network host permet d'accéder à localhost:8080 depuis le conteneur
+        
+      - name: Run OWASP ZAP Baseline Scan (Action GitHub)
         uses: zaproxy/action-baseline@v0.10.0
         with:
           target: 'http://localhost:8080'
           cmd_options: '-a -J -t 5'
           report_file: 'zap-report.json'
+        continue-on-error: true
         # Pourquoi : OWASP ZAP teste l'application EN EXÉCUTION pour :
         #   - Détecter les vulnérabilités runtime (XSS, SQL injection, etc.)
         #   - Analyser les réponses HTTP
@@ -485,8 +538,7 @@ jobs:
         #   -J : Génère un rapport JSON
         #   -t 5 : Timeout de 5 minutes
         #   report_file : Spécifie le nom du fichier de rapport
-        continue-on-error: true
-        # Note : Si Docker échoue, on continue et on crée un rapport vide dans Save DAST reports
+        # Note : Si cette action échoue (Docker), l'étape précédente peut avoir créé un rapport
         
       - name: Stop Backend Application
         if: always()
